force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks book checkouts and returns</description>
</CustomObject>