force-app/main/default/objects/Transaction__c/fields/CheckoutDate__c.field-meta.xml
<CustomField>
    <fullName>CheckoutDate__c</fullName>
    <label>Checkout Date</label>
    <required>true</required>
    <type>DateTime</type>
    <defaultValue>NOW()</defaultValue>
</CustomField>